Modules/Platform/Windows-MSVC.cmake
@@ -513,6 +513,8 @@ macro(__windows_compiler_msvc lang)
     set(CMAKE_${lang}_DEPFILE_FORMAT msvc)
   endif()
 
+  set(CMAKE_${lang}_LINK_LIBRARIES_PROCESSING ORDER=FORWARD UNICITY=ALL)
+
   # linker selection
   set(CMAKE_${lang}_USING_LINKER_SYSTEM "${CMAKE_LINKER_LINK}")
   set(CMAKE_${lang}_USING_LINKER_LLD "${CMAKE_LINKER_LLD}")
