Tests/RunCMake/CMP0156/CMP0156-OLD-AppleClang.cmake
@@ -1,0 +1,5 @@
+
+cmake_policy(SET CMP0156 OLD)
+set(APPLE_TEST TRUE)
+
+include (CMP0156-Common.cmake)
